# chairbot_robot

chairbot_neato_node/: CMakeLists.txt  package.xml
chairbot_neato_node/launch/: default.launch  drive.launch  follow.launch  fsr.launch  jellyfish.launch  mrs.launch
chairbot_neato_node/nodes/: arduino.py  arduino04.py  arduinofsr.py  default.py  final_project.py  follow.py  follow_only.py  follow_or_run.py  fsr.py  jellyfish.py  just_drive.py  linear_actuator.py  neato_mover.py  packet_replicator.py  what_is_my_name.py
