<?xml version="1.0"?>
<package>
  <name>chairbot_neato_node</name>
  <description>The chairbot_neato_node package</description>
  <version>0.1.0</version>
  <maintainer email="agnihota@oregonstate.edu">Abhijeet Agnihotri</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>chairbot_neato_driver</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
</package>
